--- a/Sharan.html
+++ b/Sharan.html
@@ -15,7 +15,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#" class="cnt">Contact</a></li>
                
             </ul>
